disable hightlight on edit page for now to fix selected text being not visible

--- a/src/styles/components/Input.module.scss
+++ b/src/styles/components/Input.module.scss
@@ -9,7 +9,7 @@
     .input {
         display: inline-flex;
         width: 100%;
-        padding: .75rem 1.5rem;
+        padding: .75rem;
         background: var(--input-background);
         border: 1px solid var(--primary100);
         border-radius: var(--border-radius);
