--- a/src/styles/components/RecordForm.module.scss
+++ b/src/styles/components/RecordForm.module.scss
@@ -10,7 +10,17 @@
         font-size: .85rem;
 
         :global(.tag_input__value-container) {
-            padding: .75rem 1.5rem;
+            padding: .25rem .75rem;
         }
     }
+
+    :global(.w-md-editor) {
+        font-family: var(--font-family);
+        --md-editor-font-family: var(--font-family);
+
+        :global(.wmde-markdown) {
+            font-family: inherit;
+        }
+    }
+
 }
