--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -67,7 +67,7 @@ main {
         flex-direction: column;
     }
 
-    .content {
+    >.content {
         position: relative;
         width: 100%;
         padding: .5rem;
